<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.rohat.momsappinventory.InventoryMenu">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:gravity="end"
                android:text="@string/add_item_to_inventory"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="@color/colorAccent" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="12dp"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <TextView
            android:id="@+id/nameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:orientation="horizontal"

            android:text="@string/name_of_item"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp"
            tools:fontFamily="serif" />

        <EditText
            android:id="@+id/name_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_name"
            android:inputType="text"
            android:orientation="horizontal" />

        <TextView
            android:id="@+id/quantityText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:orientation="horizontal"
            android:text="@string/quantity"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/quantity_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:text="0" />

            <Button
                android:id="@+id/BaddItem"
                android:layout_width="47dp"
                android:layout_height="wrap_content"
                android:onClick="onClickAdd"
                android:orientation="horizontal"
                android:text="@string/add"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <Button
                android:id="@+id/BsubtractItem"
                android:layout_width="47dp"
                android:layout_height="wrap_content"
                android:onClick="onClickSubtract"
                android:orientation="horizontal"
                android:text="@string/subtract"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="23sp"
                android:textStyle="bold" />
        </LinearLayout>


        <TextView
            android:id="@+id/locationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="Location in House:"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/location_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Enter location"
            android:inputType="text" />

        <TextView
            android:id="@+id/priceText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="Price:"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/price_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="0.00" />

        <TextView
            android:id="@+id/categoryText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="Category:"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/categoryDropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"
            android:visibility="visible" />

        <TextView
            android:id="@+id/expirationDateText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="Expiration Date:"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/expirationDate_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Enter the expiration date"
            android:inputType="date" />

        <TextView
            android:id="@+id/miscNotesText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/misc_notes"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/miscNotes_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Input any miscellaneous notes."
            android:inputType="text" />

        <Button
            android:id="@+id/Btakephoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickPhoto"
            android:text="Take Photo" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="18dp" />

        <Button
            android:id="@+id/Bsave"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:onClick="onClickSave"
            android:text="@string/save" />

    </LinearLayout>
</ScrollView>